styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
*{
    padding:0;
    margin:0;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
    font-family:"Poppins", sans-serif; /* Use the Poppins font for the body */
    font-style:normal;
    
    /* Use the Poppins font for elements with the .poppins-thin class */
}

.poppins-thin {
  font-family: "Poppins", sans-serif;
  font-style: normal;
}
.navbar{
   display:flex;
   align-items: center;
   height: 70px;
   padding: 0px 100px;
   padding-top:100px;
   
}
.menu-bar{
    list-style:none;
    font-weight:60px;
    display:flex;
    color: black;
    text-decoration: none;
    width:60%;
    position: relative;
    position: fixed;
    top: 10px;
    left: 0;
    width: 100%;
    z-index: 1000; /* Change if needed */
    padding: 15px 20px;
    font-size: 20px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
/* or fixed if sticky */
    justify-content: space-around;

}
.logo{
    width: 40%;
    font-size: 30px;
    font-weight: 600;
    color: lightskyblue;

}
.menu-bar li {
    text-decoration: none;
    font-size: 20px;
    font-weight: 500;
}
a{
    color: black;
    text-decoration: none;
    font-size: 30px; 
    transition: all 0.3s ease;
}
a:hover{
    
    text-decoration: underline;
    text-underline-offset: 10px;
    text-decoration-color:lightblue;

}
.navbar-menu{
    display:none;
}

.bubbles {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  overflow: hidden;
  z-index: 999;
}

.bubble {
  position: absolute;
  bottom: -100px;
  width: 40px;
  height: 40px;
  background: rgba(0, 123, 255, 0.3);
  border-radius: 50%;
  animation: rise 10s infinite ease-in;
}

@keyframes rise {
  0% {
    transform: translateY(0) scale(1);
    opacity: 1;
  }
  100% {
    transform: translateY(-110vh) scale(1.5);
    opacity: 0;
  }
}

.bubble:nth-child(1) { left: 5%; animation-duration: 8s; width: 20px; height: 20px; }
.bubble:nth-child(2) { left: 15%; animation-duration: 10s; width: 30px; height: 30px; }
.bubble:nth-child(3) { left: 25%; animation-duration: 7s; width: 15px; height: 15px; }
.bubble:nth-child(4) { left: 40%; animation-duration: 12s; width: 25px; height: 25px; }
.bubble:nth-child(5) { left: 60%; animation-duration: 9s; width: 35px; height: 35px; }
.bubble:nth-child(6) { left: 75%; animation-duration: 11s; width: 18px; height: 18px; }
.bubble:nth-child(7) { left: 85%; animation-duration: 10s; width: 22px; height: 22px; }


@media(max-width:1024px){
    .navbar{
        display:none;
    }
     .navbar-menu{
        display:flex;
    }.hamburger{
        display: flex;
        cursor: pointer;
        font-size: 35px;
        color: white;
        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
        position:fixed;
        right:30px;
        top:20px;
        padding: 4px;
    }
    .navbar-menu .logo{
        margin-top:20px;
        padding-left:30px;
    }
    .navbar-menu .menu-bar{
        display:flex;
        flex-direction: column;
        position: fixed;
        right:0;
        top: 70px;
        left: 0;
        width: 100%;
        background-color: white;
        padding: 10px;
        gap:10px;
        border-radius:5px;
        margin-right:-400px;
        transition:all 0.3s ease;
    }
    .navbar-menu .menu-bar li{

        background-color:white;
        border-radius:5px;
        padding:5px;
        color: black;
        font-style: normal;


    }
    .menu-bar,navbar-menu li{
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 20px;
        font-size: 100px;
    }
    .navbar-menu .menu-bar.show{
        margin-right:0px;

    }
}
@media(max-width:767px){
    .logo{
        white-space: nowrap;
    }
    .navbar-menu .logo{
        font-size: 25px;
        padding-left:10px;
        margin-top:25px;

    }
    
}
html {
  scroll-behavior: smooth;
  scroll-padding-top: 70px; /* Adjust based on your navbar height */
}

